@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2011 - TortoiseSVN
+// Copyright (C) 2003-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -75,6 +75,7 @@ protected:
     CString         m_sCheckoutDirOrig;
     bool            m_bAutoCreateTargetName;
     CComboBox       m_depthCombo;
+    bool            m_bBlockMessages;
 
 public:
     CHistoryCombo   m_URLCombo;
